Trying to fix background image bug on Iphones.

--- a/static/css/style.scss
+++ b/static/css/style.scss
@@ -148,7 +148,7 @@ li:hover {
     height: 100vh;
     width: 100vw;
     position: relative;
-    background-attachment: fixed;
+    background-attachment: scroll;
 }
 
 .reviews-background {
@@ -156,7 +156,7 @@ li:hover {
     background-color: rgba(0, 0, 0, 0.5);
     background-position-y: 30%;
     background-size: cover;
-    background-attachment: fixed;
+    background-attachment: scroll;
 }
 
 .landing-page-header h1 {
@@ -190,7 +190,7 @@ li:hover {
     background-color: rgba(0, 0, 0, 0.5);
     background-position: 50%;
     background-size: cover;
-    background-attachment: fixed;
+    background-attachment: scroll;
     height: 35vh;
     display: flex;
     align-items: center;
